# tap-cloudpayments

./: .pre-commit-config.yaml  LICENSE  README.md  meltano.yml  pyproject.toml
.github/workflows/: test.yml
tap_cloudpayments/: __init__.py  client.py  helpers.py  pagination.py  streams.py  tap.py  utils.py
tap_cloudpayments/schemas/: payments.json
tests/: __init__.py  test_core.py
