[tool.poetry]
name = "petrikoro-tap-cloudpayments"
version = "0.0.1"
description = "`tap-cloudpayments` is a Singer tap for CloudPayments, built with the Meltano Singer SDK."
readme = "README.md"
authors = ["Denis Gribanov"]
keywords = [
    "ELT",
    "CloudPayments",
]
license = "Apache-2.0"
packages = [
    { include = "tap_cloudpayments" },
]

[tool.poetry.dependencies]
python = "<3.12,>=3.7.1"
singer-sdk = { version="^0.30.0" }
fs-s3fs = { version = "^1.1.1", optional = true }
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
singer-sdk = { version="^0.30.0", extras = ["testing"] }
viztracer = "^0.15.6"

[tool.poetry.extras]
s3 = ["fs-s3fs"]

[tool.mypy]
python_version = "3.9"
warn_unused_configs = true

[tool.ruff]
ignore = [
    "ANN101",  # missing-type-self
    "ANN102",  # missing-type-cls
]
select = ["ALL"]
src = ["tap_cloudpayments"]
target-version = "py37"


[tool.ruff.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.isort]
known-first-party = ["tap_cloudpayments"]

[tool.ruff.pydocstyle]
convention = "google"

[build-system]
requires = ["poetry-core>=1.0.8"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-cloudpayments = 'tap_cloudpayments.tap:TapCloudPayments.cli'
